--- a/QLPM_GUI/FrmTimKiemBenhNhan_GUI.resx
+++ b/QLPM_GUI/FrmTimKiemBenhNhan_GUI.resx
@@ -120,38 +120,74 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="picPhieuKhamBenh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAb4AAAG+ARdWhhQAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAG3klEQVR4XuWb328UVRTHm/hm/A988A8wSOKvF40h8mZICVFf/UF88E0SWwj6RIIhQdMfQAuIGI2Q
-        2N1U0GIxIhsTjBDFX5FCE+zuFtgCBdrS2tLFpcf7nZlb785+t3tn986wZk/yIfTu3LnnnJl77zlnZtpE
-        JFb6RlIP9WRT7d259KaefGpnb3bgUE8ulVGMKmYD8P+M95s6xjtW9UFfdk6X0MZG6bqcerg3N/CmMmpY
-        saiQOkHfYZwL52RjNQptrIf9E0MPqivYoa7gz0rpJcMIVyzh3BgDYzEd6oE2RiElqQe6s+k3lIKFkMJx
-        UsCYGJvpFAXaaEvPWHqdUmYkpFySjEAHppsttLEWe7KDj3TnUt8The4L0AU6MV1rQRtXoncs9awadDKs
-        RBMwCd2YzitBG6vRnR/YqAYqhgZuJorQkeleDdoYBotNTy7dRQZsUtJdtgskbTTxVvlc6igfqHmBzjZO
-        oI0m/68rHybdxWwyoY2aYM6TE6/Mp1eOy6mpP+TcXFayCxNydfGWjC9ck/NzOTkzPSKfT5yk/eKg1ppA
-        G0Gw2lsveLvyacnc/EWm7s6q7rVlvnRHfpq5IHvHj9DzOaS40u5AG7Gnqo7WW93Ra6dk+u6c6hpdFkqL
-        nuPYeR0yWS1OqGgAUYKc09PnVJdyKdwROTsjcuy6yIFLIjv+EunPixy5JmoKiOQXREpLwcGBjP49Lrvz
-        g3QMF8AmNUyFrRUNQXhLTxLmwpyyypDb/4gcuiKy/WJt9o77jjIFa0Vf/gs6lhNI2Fz2h7/f28X24Sv/
-        222R98e4sdV4T5G5WX43jM0XpDeXpmM6YCS8NZY5IMjqWMcyMOdNwa3NDLTlQ3U3FO8FJ1OCnYKN6wLY
-        qIaodABybHVAzZQWq7254OHKw4id6ur/MCVy4kalgTYMTwYnVFJaKslHl4fo+A4omPWEZQd4xQzeoQys
-        2Fow53Hb41aeWPTbbha5gTZk5/1zQP6czdLxXQBb1RDlDggqObSDibnP6wXvcMH/G1M5PVFpmC27ciKL
-        wVQoLd2T/rhiBGWrGuI/B6Depn6oWcZChKcFK7hWvDvr3/4H1ZZnGlQPv6oppWV48jTVwwFLusboOSAo
-        YLIDy0B4qwX7PDOgURA7aEFswPRwAWxWQ/gOUA2o3tIDTRDba4GizIBGwY6g5XpxiurhiGE1RJtft7cs
-        XSOx0YIIjxnQKFhQ7wZxwVxpgerhiEXY3oYHEORHCiI1LQhvmQEuuBrsKFgImR7OULaruD+9if5IQEqr
-        BbE9U94Fd4KdYF4lSkwPV8B2bH872Y8M5PNaGo3+qtFnpBc3itNUD2co2xEA4VkdPyAEQlQtyOqYAY0C
-        x2pBXsD0cAVsxw6AB5X0gDCo5GhBSssMaBQ4VsvJ+OsEGTgAT2bZjxRUciDI4JDSMiPqBfkEwmstBy7F
-        lg9oRuEAPJ5mP1JQxtKCaBDbFjOmHswoML9wlY7vmNnIDkAND2UsLcjnmTFR0fmElsOFb+n4jvEcEGkK
-        ADMjxFRA9MaMsgUZ5Yxx65+fy9NxY8CbAtaLoAnidC0oZiCfZ8bVAlfeNP7Cxax0DvbSMWMgE2kbNEEB
-        04wMIcjnkdIyQ8NgwTPnPOT6jVuydsNGWfXcenlr4AM6rkv8bTBCIBQGBUzs1aYgn4dhSJYwNcxFEkGO
-        rgybqz1kVF15GP/oM+0e2gnbz34iO37/jI7fMAiEooTCDBQwESChjMUEiQ1iex3eMsGc33qsTx5bs2HZ
-        AWD18y/JE+telaeVY975bh8dvxH8UDhCMrQSqOGhjIUExlaw1Zmr/dtf9iw7YdWaF+XxF15ZJhYnIBmK
-        kg7bgDIWKjlYJJHPI6WFU5DYILbHlEGEVy3IgRNWr325zPiYnOCnw+pCYCewKogkwbYfD3q3PXMAcOgE
-        vyCCf2xLYkmw7czH8mT7a9R4jQsnlJXEbIuiSdHx1e64nVBeFAUoFZMD7xsdQzE6IVwWByoosHowkiQd
-        Q3vkqRicAFsrHGD7aCxpOo85dwJ/NAZsH44mTefXfc6cUPXhKIjyeDxpNg8rJ6yv7YR3M/tp/4CVH4+D
-        KC9IJI2NE9o3d9K+HrVekNBEeUUmabYchxNep8Zjmmz5pp/2s35FBkR9SSppthzvr3ACjMdawY5XRHtJ
-        CkR9TS5pcKW1E2oYH/01OU29L0omxdYT+9Sc76h624O6X5TUtPSrsgDbBl485gM0L9A5vOUxaGMYPz5o
-        0dflTYI1ofU+mDAJdofW/GRGgz21mYIl6FJtn68FbbQlCJtb77M5E2+X8LPI1vtw0gQ5tldU8StLrfPp
-        LAP1tqDQ2jofT1fDe+6QbdbP56XtXy6uZcJZRFNmAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        vgAAAb4BF1aGFAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAbeSURBVHhe5Zvf
+        bxRVFMeb+Gb8D3zwDzBI4q8XjSHyZkgJUV/9QXzwTRJbCPpEgiFB0x9AC4gYjZDY3VTQYjEiGxOMEMVf
+        kUIT7O4W2AIF2tLa0sWlx/udmVvvzn63e2f3zrBmT/Ih9O7cueecmXvvOWdm2kQkVvpGUg/1ZFPt3bn0
+        pp58amdvduBQTy6VUYwqZgPw/4z3mzrGO1b1QV92TpfQxkbpupx6uDc38KYyalixqJA6Qd9hnAvnZGM1
+        Cm2sh/0TQw+qK9ihruDPSuklwwhXLOHcGANjMR3qgTZGISWpB7qz6TeUgoWQwnFSwJgYm+kUBdpoS89Y
+        ep1SZiSkXJKMQAemmy20sRZ7soOPdOdS3xOF7gvQBToxXWtBG1eidyz1rBp0MqxEEzAJ3ZjOK0Ebq9Gd
+        H9ioBiqGBm4mitCR6V4N2hgGi01PLt1FBmxS0l22CyRtNPFW+VzqKB+oeYHONk6gjSb/rysfJt3FbDKh
+        jZpgzpMTr8ynV47Lqak/5NxcVrILE3J18ZaML1yT83M5OTM9Ip9PnKT94qDWmkAbQbDaWy94u/Jpydz8
+        RabuzqrutWW+dEd+mrkge8eP0PM5pLjS7kAbsaeqjtZb3dFrp2T67pzqGl0WSoue49h5HTJZLU6oaABR
+        gpzT0+dUl3Ip3BE5OyNy7LrIgUsiO/4S6c+LHLkmagqI5BdESkvBwYGM/j0uu/ODdAwXwCY1TIWtFQ1B
+        eEtPEubCnLLKkNv/iBy6IrL9Ym32jvuOMgVrRV/+CzqWE0jYXPaHv9/bxfbhK//bbZH3x7ix1XhPkblZ
+        fjeMzRekN5emYzpgJLw1ljkgyOpYxzIw503Brc0MtOVDdTcU7wUnU4Kdgo3rAtiohqh0AHJsdUDNlBar
+        vbng4crDiJ3q6v8wJXLiRqWBNgxPBidUUloqyUeXh+j4DiiY9YRlB3jFDN6hDKzYWjDncdvjVp5Y9Ntu
+        FrmBNmTn/XNA/pzN0vFdAFvVEOUOCCo5tIOJuc/rBe9wwf8bUzk9UWmYLbtyIovBVCgt3ZP+uGIEZasa
+        4j8HoN6mfqhZxkKEpwUruFa8O+vf/gfVlmcaVA+/qimlZXjyNNXDAUu6xug5IChgsgPLQHirBfs8M6BR
+        EDtoQWzA9HABbFZD+A5QDaje0gNNENtrgaLMgEbBjqDlenGK6uGIYTVEm1+3tyxdI7HRggiPGdAoWFDv
+        BnHBXGmB6uGIRdjehgcQ5EcKIjUtCG+ZAS64GuwoWAiZHs5Qtqu4P72J/khASqsFsT1T3gV3gp1gXiVK
+        TA9XwHZsfzvZjwzk81oajf6q0WekFzeK01QPZyjbEQDhWR0/IARCVC3I6pgBjQLHakFewPRwBWzHDoAH
+        lfSAMKjkaEFKywxoFDhWy8n46wQZOABPZtmPFFRyIMjgkNIyI+oF+QTCay0HLsWWD2hG4QA8nmY/UlDG
+        0oJoENsWM6YezCgwv3CVju+Y2cgOQA0PZSwtyOeZMVHR+YSWw4Vv6fiO8RwQaQoAMyPEVED0xoyyBRnl
+        jHHrn5/L03FjwJsC1ougCeJ0LShmIJ9nxtUCV940/sLFrHQO9tIxYyATaRs0QQHTjAwhyOeR0jJDw2DB
+        M+c85PqNW7J2w0ZZ9dx6eWvgAzquS/xtMEIgFAYFTOzVpiCfh2FIljA1zEUSQY6uDJurPWRUXXkY/+gz
+        7R7aCdvPfiI7fv+Mjt8wCISihMIMFDARIKGMxQSJDWJ7Hd4ywZzfeqxPHluzYdkBYPXzL8kT616Vp5Vj
+        3vluHx2/EfxQOEIytBKo4aGMhQTGVrDVmav921/2LDth1ZoX5fEXXlkmFicgGYqSDtuAMhYqOVgkkc8j
+        pYVTkNggtseUQYRXLciBE1avfbnM+Jic4KfD6kJgJ7AqiCTBth8Perc9cwBw6AS/IIJ/bEtiSbDtzMfy
+        ZPtr1HiNCyeUlcRsi6JJ0fHV7ridUF4UBSgVkwPvGx1DMTohXBYHKiiwejCSJB1De+SpGJwAWyscYPto
+        LGk6jzl3An80BmwfjiZN59d9zpxQ9eEoiPJ4PGk2DysnrK/thHcz+2n/gJUfj4MoL0gkjY0T2jd30r4e
+        tV6Q0ER5RSZpthyHE16nxmOabPmmn/azfkUGRH1JKmm2HO+vcAKMx1rBjldEe0kKRH1NLmlwpbUTahgf
+        /TU5Tb0vSibF1hP71JzvqHrbg7pflNS09KuyANsGXjzmAzQv0Dm85TFoYxg/PmjR1+VNgjWh9T6YMAl2
+        h9b8ZEaDPbWZgiXoUm2frwVttCUIm1vvszkTb5fws8jW+3DSBDm2V1TxK0ut8+ksA/W2oNDaOh9PV8N7
+        7pBt1s/npe1fLq5lwllEU2YAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        vgAAAb4BF1aGFAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAbeSURBVHhe5Zvf
+        bxRVFMeb+Gb8D3zwDzBI4q8XjSHyZkgJUV/9QXzwTRJbCPpEgiFB0x9AC4gYjZDY3VTQYjEiGxOMEMVf
+        kUIT7O4W2AIF2tLa0sWlx/udmVvvzn63e2f3zrBmT/Ih9O7cueecmXvvOWdm2kQkVvpGUg/1ZFPt3bn0
+        pp58amdvduBQTy6VUYwqZgPw/4z3mzrGO1b1QV92TpfQxkbpupx6uDc38KYyalixqJA6Qd9hnAvnZGM1
+        Cm2sh/0TQw+qK9ihruDPSuklwwhXLOHcGANjMR3qgTZGISWpB7qz6TeUgoWQwnFSwJgYm+kUBdpoS89Y
+        ep1SZiSkXJKMQAemmy20sRZ7soOPdOdS3xOF7gvQBToxXWtBG1eidyz1rBp0MqxEEzAJ3ZjOK0Ebq9Gd
+        H9ioBiqGBm4mitCR6V4N2hgGi01PLt1FBmxS0l22CyRtNPFW+VzqKB+oeYHONk6gjSb/rysfJt3FbDKh
+        jZpgzpMTr8ynV47Lqak/5NxcVrILE3J18ZaML1yT83M5OTM9Ip9PnKT94qDWmkAbQbDaWy94u/Jpydz8
+        RabuzqrutWW+dEd+mrkge8eP0PM5pLjS7kAbsaeqjtZb3dFrp2T67pzqGl0WSoue49h5HTJZLU6oaABR
+        gpzT0+dUl3Ip3BE5OyNy7LrIgUsiO/4S6c+LHLkmagqI5BdESkvBwYGM/j0uu/ODdAwXwCY1TIWtFQ1B
+        eEtPEubCnLLKkNv/iBy6IrL9Ym32jvuOMgVrRV/+CzqWE0jYXPaHv9/bxfbhK//bbZH3x7ix1XhPkblZ
+        fjeMzRekN5emYzpgJLw1ljkgyOpYxzIw503Brc0MtOVDdTcU7wUnU4Kdgo3rAtiohqh0AHJsdUDNlBar
+        vbng4crDiJ3q6v8wJXLiRqWBNgxPBidUUloqyUeXh+j4DiiY9YRlB3jFDN6hDKzYWjDncdvjVp5Y9Ntu
+        FrmBNmTn/XNA/pzN0vFdAFvVEOUOCCo5tIOJuc/rBe9wwf8bUzk9UWmYLbtyIovBVCgt3ZP+uGIEZasa
+        4j8HoN6mfqhZxkKEpwUruFa8O+vf/gfVlmcaVA+/qimlZXjyNNXDAUu6xug5IChgsgPLQHirBfs8M6BR
+        EDtoQWzA9HABbFZD+A5QDaje0gNNENtrgaLMgEbBjqDlenGK6uGIYTVEm1+3tyxdI7HRggiPGdAoWFDv
+        BnHBXGmB6uGIRdjehgcQ5EcKIjUtCG+ZAS64GuwoWAiZHs5Qtqu4P72J/khASqsFsT1T3gV3gp1gXiVK
+        TA9XwHZsfzvZjwzk81oajf6q0WekFzeK01QPZyjbEQDhWR0/IARCVC3I6pgBjQLHakFewPRwBWzHDoAH
+        lfSAMKjkaEFKywxoFDhWy8n46wQZOABPZtmPFFRyIMjgkNIyI+oF+QTCay0HLsWWD2hG4QA8nmY/UlDG
+        0oJoENsWM6YezCgwv3CVju+Y2cgOQA0PZSwtyOeZMVHR+YSWw4Vv6fiO8RwQaQoAMyPEVED0xoyyBRnl
+        jHHrn5/L03FjwJsC1ougCeJ0LShmIJ9nxtUCV940/sLFrHQO9tIxYyATaRs0QQHTjAwhyOeR0jJDw2DB
+        M+c85PqNW7J2w0ZZ9dx6eWvgAzquS/xtMEIgFAYFTOzVpiCfh2FIljA1zEUSQY6uDJurPWRUXXkY/+gz
+        7R7aCdvPfiI7fv+Mjt8wCISihMIMFDARIKGMxQSJDWJ7Hd4ywZzfeqxPHluzYdkBYPXzL8kT616Vp5Vj
+        3vluHx2/EfxQOEIytBKo4aGMhQTGVrDVmav921/2LDth1ZoX5fEXXlkmFicgGYqSDtuAMhYqOVgkkc8j
+        pYVTkNggtseUQYRXLciBE1avfbnM+Jic4KfD6kJgJ7AqiCTBth8Perc9cwBw6AS/IIJ/bEtiSbDtzMfy
+        ZPtr1HiNCyeUlcRsi6JJ0fHV7ridUF4UBSgVkwPvGx1DMTohXBYHKiiwejCSJB1De+SpGJwAWyscYPto
+        LGk6jzl3An80BmwfjiZN59d9zpxQ9eEoiPJ4PGk2DysnrK/thHcz+2n/gJUfj4MoL0gkjY0T2jd30r4e
+        tV6Q0ER5RSZpthyHE16nxmOabPmmn/azfkUGRH1JKmm2HO+vcAKMx1rBjldEe0kKRH1NLmlwpbUTahgf
+        /TU5Tb0vSibF1hP71JzvqHrbg7pflNS09KuyANsGXjzmAzQv0Dm85TFoYxg/PmjR1+VNgjWh9T6YMAl2
+        h9b8ZEaDPbWZgiXoUm2frwVttCUIm1vvszkTb5fws8jW+3DSBDm2V1TxK0ut8+ksA/W2oNDaOh9PV8N7
+        7pBt1s/npe1fLq5lwllEU2YAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
